loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:16: error: not found: value nbBaggles
if (nbBaggles >= 3) {
    ^