loopdowhile.Poucet2.scala.code
while (sortieTrouvee==false) {
  
do {
  
var nbBaggles:Int = 0;  
  
avance();

if (estSurBiscuit==true) {
      nbBaggles=nbBaggles+1;
    }
    
    
  } while(crossing==false)

if (nbBaggles >= 3) {
  gauche(); }
else {
  droite();
}
  
} 

  
avance();